# piccolo

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE.txt  README.md  grammar.ebnf  rustfmt.toml  test.pc
.cargo/: config.toml
examples/: 99b.pc  fuzz.rs  fuzzer.rs  hello_world.pc  long.pc  main.rs  mandelbrot.pc  reentrant.rs  test_files.rs
examples/benchmark/: arguments.pc  fib.pc  string_equality.pc
examples/output/: collatz.out  recursion_depth_fail.out
examples/output/assignment/: grouping_fail.out  infix_operator_fail.out  undefined_fail.out
examples/output/block/: local_defined_elsewhere_fail.out
examples/output/call/: bool_fail.out  string_fail.out
examples/output/closure/: simple.out
examples/output/for/: statement_condition_fail.out  statement_increment_fail.out  statement_initializer_fail.out
examples/output/function/: body_must_be_block_fail.out  extra_arguments_fail.out  local_defined_elsewhere_fail.out  local_mutual_recursion_fail.out  print.out  redefine_locally_fail.out  stack_trace_fail.out
examples/output/number/: leading_dot_fail.out
examples/output/operator/: add_bool_string_fail.out  add_num_nil_fail.out  add_string_nil.out  chained_comparison_fail.out  divide_nonnum_num_fail.out  greater_nonnum_num_fail.out  greater_or_equal_num_nonnum_fail.out  less_num_nonnum_fail.out  multiply_num_nonnum_fail.out
examples/output/statements/: assert_fail.out  block_fail.out
examples/test_files/: collatz.pc  line_endings.pc  precedence.pc  recursion_depth_fail.out  recursion_depth_fail.pc  test.pc
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ast.rs  interpret.rs
my_log/: Cargo.toml
my_log/src/: lib.rs
piccolo_derive/: Cargo.toml
piccolo_derive/src/: lib.rs
src/: ast.rs  chunk.rs  compiler.rs  data.rs  env.rs  err.rs  error.rs  expr.rs  foreign.rs  func.rs  interp.rs  lib.rs  machine.rs  main.rs  old_interp.rs  op.rs  parser.rs  pretty.rs  rules.rs  runtime.rs  scanner.rs  stdlib.rs  stmt.rs  token.rs  v2.rs  value.rs
src/ast/: expr.rs  mod.rs  parser.rs  stmt.rs
src/compiler/: ast.rs  compiler.rs  emitter.rs  emitter2.rs  emitter3.rs  mod.rs  ns.rs  parser.rs  parser_compiler.rs  scanner.rs  typeck.rs
src/runtime/: builtin.rs  chunk.rs  interner.rs  memory.rs  memory2.rs  object.rs  op.rs  value.rs  vm.rs  vm2.rs
src/v2/: builtin.rs  compiler.rs
tcolor/: Cargo.toml
tcolor/src/: lib.rs
tests/: piccolo.rs
(+204 files in other folders)
