[package]
name = 'piccolo'
version = '0.4.0'
authors = ['Zack <zphixon@gmail.com>']
edition = '2021'
default-run = 'main'

[features]
default = ['log/max_level_trace', 'cli']
cli = ['gumdrop', 'rustyline']
log = ['my_log']

[dependencies]
slotmap = '1.0.6'
downcast-rs = '1.2.0'
paste = '1.0.7'
fnv = '1.0.7'
rand = { version = '0.8.5' }
once_cell = '1.13.0'
my_log = { path = 'my_log', optional = true }
log = '*'
gumdrop = { version = '0.8.1', optional = true }
rustyline = { version = '9.1.2', optional = true }

[profile.release]
debug = true

[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = '*', features = ['derive'] }
