[package]
name = 'piccolo'
version = '0.4.0'
authors = ['Zack <zphixon@gmail.com>']
edition = '2021'
default-run = 'main'

[features]
default = ['cli', 'color']
cli = ['gumdrop', 'rustyline']
color = ['tcolor']
log = ['my_log', 'log/max_level_trace']

[dependencies]
slotmap = '1.0.6'
downcast-rs = '1.2.0'
paste = '1.0.7'
fnv = '1.0.7'
rand = '0.8.5'
once_cell = '1.13.0'
unicode-segmentation = '1.9.0'
hex = '0.4.3'
my_log = { path = 'my_log', optional = true }
log = { version = '*', optional = true }
gumdrop = { version = '0.8.1', optional = true }
rustyline = { version = '9.1.2', optional = true }
tcolor = { path = 'tcolor', optional = true }

[profile.release]
debug = true
incremental = true

[profile.dev]
incremental = true

[profile.test]
incremental = true

[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = '*', features = ['derive'] }
