[package]
name = 'piccolo'
version = '0.4.0'
authors = ['Zack <zphixon@gmail.com>']
edition = '2021'
default-run = 'main'

[features]
default = []
logging = ['my_log', 'log/max_level_trace']

[dependencies]
slotmap = '1.0.6'
downcast-rs = '1.2.0'
paste = '1.0.7'
fnv = '1.0.7'
rand = '0.8.5'
once_cell = '1.13.0'
unicode-segmentation = '1.9.0'
hex = '0.4.3'
gumdrop = '0.8.1'
rustyline = '9.1.2'
tcolor = { path = 'tcolor' }
my_log = { path = 'my_log', optional = true }
log = { version = '*', optional = true }

[profile.release]
debug = true
incremental = true

[profile.dev]
incremental = true

[profile.test]
incremental = true

[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = '*', features = ['derive'] }

[workspace]
members = [
    'my_log',
    'tcolor',
]
